# cuda_dmo

./: CMakeLists.txt  README.md  main.cpp
cuda/: CMakeLists.txt  foo.cu  foo.cuh
